--- a/pacman-deploy.yaml
+++ b/pacman-deploy.yaml
@@ -1,28 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "3"
-  creationTimestamp: "2024-02-20T10:55:24Z"
-  generation: 11
+  creationTimestamp: null
   labels:
     app: pacman
   name: pacman
   namespace: pacman
-  resourceVersion: "54403"
-  uid: 2323da56-4c3a-4fc6-8be3-c60ff242e4ef
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: pacman
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  strategy: {}
   template:
     metadata:
       creationTimestamp: null
@@ -30,41 +19,9 @@ spec:
         app: pacman
     spec:
       containers:
-      - env:
-        - name: COLOR
-          valueFrom:
-            configMapKeyRef:
-              key: COLOR
-              name: cfgmap
-        image: ghcr.io/fabioerabreu/pacman:2.0
-        imagePullPolicy: IfNotPresent
+      - image: ghcr.io/fabioerabreu/pacman:2.0
         name: pacman
         resources:
           requests:
             cpu: 1m
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
-status:
-  availableReplicas: 1
-  conditions:
-  - lastTransitionTime: "2024-02-20T10:55:24Z"
-    lastUpdateTime: "2024-02-21T13:56:01Z"
-    message: ReplicaSet "pacman-77fb79cb64" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  - lastTransitionTime: "2024-02-22T11:26:38Z"
-    lastUpdateTime: "2024-02-22T11:26:38Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
-  observedGeneration: 11
-  readyReplicas: 1
-  replicas: 1
-  updatedReplicas: 1
+status: {}
