--- a/pacman-hpa.yaml
+++ b/pacman-hpa.yaml
@@ -1,54 +1,15 @@
-apiVersion: autoscaling/v2
+apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"autoscaling/v1","kind":"HorizontalPodAutoscaler","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"pacman"},"name":"pacman-hpa","namespace":"pacman"},"spec":{"maxReplicas":5,"minReplicas":1,"scaleTargetRef":{"apiVersion":"apps/v1","kind":"Deployment","name":"pacman"},"targetCPUUtilizationPercentage":1}}
-  creationTimestamp: "2024-02-22T14:02:27Z"
-  labels:
-    app.kubernetes.io/instance: pacman
-  name: pacman-hpa
-  namespace: pacman
-  resourceVersion: "65975"
-  uid: 53ea6442-4d7b-4a1d-ab52-9221310f63f9
+  creationTimestamp: null
+  name: pacman
 spec:
   maxReplicas: 5
-  metrics:
-  - resource:
-      name: cpu
-      target:
-        averageUtilization: 1
-        type: Utilization
-    type: Resource
-  minReplicas: 1
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
     name: pacman
+  targetCPUUtilizationPercentage: 1
 status:
-  conditions:
-  - lastTransitionTime: "2024-02-22T14:02:34Z"
-    message: recommended size matches current size
-    reason: ReadyForNewScale
-    status: "True"
-    type: AbleToScale
-  - lastTransitionTime: "2024-02-22T14:02:34Z"
-    message: the HPA was able to successfully calculate a replica count from cpu resource
-      utilization (percentage of request)
-    reason: ValidMetricFound
-    status: "True"
-    type: ScalingActive
-  - lastTransitionTime: "2024-02-22T14:02:34Z"
-    message: the desired replica count is less than the minimum replica count
-    reason: TooFewReplicas
-    status: "True"
-    type: ScalingLimited
-  currentMetrics:
-  - resource:
-      current:
-        averageUtilization: 0
-        averageValue: "0"
-      name: cpu
-    type: Resource
-  currentReplicas: 1
-  desiredReplicas: 1
+  currentReplicas: 0
+  desiredReplicas: 0
