--- a/pacman-svc.yaml
+++ b/pacman-svc.yaml
@@ -3,15 +3,17 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    app: pacman-svc
+    app: pacman
     app.kubernetes.io/instance: pacman
-  name: pacman-svc
+  name: pacman
+  namespace: pacman-argo
 spec:
   ports:
-  - port: 8080
+  - port: 32000
     protocol: TCP
-    targetPort: 8080
+    targetPort: 32000
   selector:
     app: pacman
+  type: LoadBalancer
 status:
   loadBalancer: {}
